corrected the alignment for the exchange history element

--- a/public/styles.css
+++ b/public/styles.css
@@ -97,11 +97,19 @@ input {
     border-radius: 5px;
 }
 
+.exchange-header h1{
+    font-size: 30px;
+    line-height: 1;
+    margin-bottom: 19px;
+}
+
 .single-card{
     display: flex;
     flex-direction: row;
     border-radius: 10px;
-    padding: 20px;
+    padding: 10px;
+    margin-bottom: 0px;
+    position: absolute;
 }
 
 .date, .currency{
@@ -120,9 +128,9 @@ input {
 
 .history{
     width: 270px;
+    height: 190px;
     margin-left: 40px;
     margin-top: 50px;
-    
     background-color: white;
 }
 
